--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,8 @@
 language: node_js
-sudo: required
-before_install: sudo apt-get install libcairo2-dev libjpeg8-dev libpango1.0-dev libgif-dev build-essential g++
+before_install: brew install pkg-config cairo pango libpng jpeg giflib
 env:
   - CXX=g++-4.8
 os:
   - osx
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-      - g++-4.8
 node_js:
   - "7.0.0"
