reset travis ci config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 language: node_js
-before_install: brew install pkg-config cairo pango libpng jpeg giflib
+sudo: required
+before_install: sudo apt-get install libcairo2-dev libjpeg8-dev libpango1.0-dev libgif-dev build-essential g++
 env:
   - CXX=g++-4.8
-os:
-  - osx
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
 node_js:
   - "7.0.0"
