--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,7 @@
 language: node_js
 sudo: required
-before_install: sudo apt-get install libcairo2-dev libjpeg8-dev libpango1.0-dev libgif-dev build-essential g++
-env:
-  - CXX=g++-4.8
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-      - g++-4.8
+os:
+  - osx
+before_install: brew install pkg-config cairo pango libpng jpeg giflib
 node_js:
   - "7.0.0"
